GraphQL: object key flag

--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.Client/ClusterKit.Web.GraphQL.Client.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.Client/ClusterKit.Web.GraphQL.Client.csproj
@@ -48,6 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiDescription.cs" />
+    <Compile Include="ApiField.cs" />
+    <Compile Include="ApiMethod.cs" />
+    <Compile Include="ApiType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PublishToApiAttribute.cs" />
   </ItemGroup>
