GraphQL: API declaration

--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.API/ClusterKit.Web.GraphQL.API.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.API/ClusterKit.Web.GraphQL.API.csproj
@@ -43,7 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiProvider.cs" />
+    <Compile Include="INodeConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryResult.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ClusterKit.Web.GraphQL.Client\ClusterKit.Web.GraphQL.Client.csproj">
+      <Project>{f9757ef8-1bb7-4a3e-84e0-57e2f8255ea1}</Project>
+      <Name>ClusterKit.Web.GraphQL.Client</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
