--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.Client/ClusterKit.Web.GraphQL.Client.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.Client/ClusterKit.Web.GraphQL.Client.csproj
@@ -50,14 +50,18 @@
     <Compile Include="ApiDescription.cs" />
     <Compile Include="ApiField.cs" />
     <Compile Include="ApiType.cs" />
+    <Compile Include="Attributes\ApiDescriptionAttribute.cs" />
+    <Compile Include="Attributes\DeclareConnectionAttribute.cs" />
+    <Compile Include="Attributes\DeclareMutationAttribute.cs" />
+    <Compile Include="Attributes\PublishToApiAttribute.cs" />
     <Compile Include="EnFieldFlags.cs" />
     <Compile Include="EnScalarType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PublishToApiAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
