--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.API/ClusterKit.Web.GraphQL.API.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.API/ClusterKit.Web.GraphQL.API.csproj
@@ -51,10 +51,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiProvider.cs" />
+    <Compile Include="AssembleTempData.cs" />
     <Compile Include="INodeConnection.cs" />
+    <Compile Include="InputContractResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryResult.cs" />
+    <Compile Include="ResolverGenerator.cs" />
     <Compile Include="Resolvers\PropertyResolver.cs" />
+    <Compile Include="TypeMetadata.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ClusterKit.Security\ClusterKit.Security.Client\ClusterKit.Security.Client.csproj">
