GraphQL: connection filters and sorts

--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.API/ClusterKit.Web.GraphQL.API.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.API/ClusterKit.Web.GraphQL.API.csproj
@@ -58,6 +58,7 @@
     <Compile Include="QueryResult.cs" />
     <Compile Include="ResolverGenerator.cs" />
     <Compile Include="Resolvers\PropertyResolver.cs" />
+    <Compile Include="Resolvers\SwapVisitor.cs" />
     <Compile Include="TypeMetadata.cs" />
   </ItemGroup>
   <ItemGroup>
