GraphQL: API and Publisher integration - scalars, objects and methods

--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/ClusterKit.Web.GraphQL.Publisher.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.Publisher/ClusterKit.Web.GraphQL.Publisher.csproj
@@ -218,6 +218,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiProvider.cs" />
+    <Compile Include="Internals\Converter.cs" />
     <Compile Include="TempApiRequest.cs" />
     <Compile Include="Configuration.Designer.cs">
       <DependentUpon>Configuration.resx</DependentUpon>
