--- a/ClusterKit.Web/ClusterKit.Web.GraphQL.Client/ClusterKit.Web.GraphQL.Client.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.GraphQL.Client/ClusterKit.Web.GraphQL.Client.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Attributes\PublishToApiAttribute.cs" />
     <Compile Include="EnFieldFlags.cs" />
     <Compile Include="EnScalarType.cs" />
+    <Compile Include="MutationApiRequest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
