--- a/ClusterKit.API/ClusterKit.API.Endpoint/packages.config
+++ b/ClusterKit.API/ClusterKit.API.Endpoint/packages.config
@@ -2,37 +2,25 @@
 <packages>
   <package id="Akka" version="1.1.3" targetFramework="net46" />
   <package id="Akka.Cluster" version="1.1.3" targetFramework="net46" />
+  <package id="Akka.Cluster.Sharding" version="1.1.3.32-beta" targetFramework="net46" />
   <package id="Akka.Cluster.Tools" version="1.1.3.32-beta" targetFramework="net46" />
-  <package id="Akka.DI.CastleWindsor" version="1.0.8.191-beta" targetFramework="net45" />
+  <package id="Akka.DI.CastleWindsor" version="1.0.8.191-beta" targetFramework="net46" />
   <package id="Akka.DI.Core" version="1.1.3" targetFramework="net46" />
-  <package id="Akka.DI.TestKit" version="1.1.3" targetFramework="net46" />
   <package id="Akka.Logger.Serilog" version="1.1.2" targetFramework="net46" />
+  <package id="Akka.Persistence" version="1.1.3.32-beta" targetFramework="net46" />
   <package id="Akka.Remote" version="1.1.3" targetFramework="net46" />
   <package id="Akka.Serialization.Hyperion" version="1.1.3.32-beta" targetFramework="net46" />
-  <package id="Akka.TestKit" version="1.1.3" targetFramework="net46" />
-  <package id="Akka.TestKit.Xunit2" version="1.1.3" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.4.0" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
-  <package id="GraphQL" version="0.14.6.657" targetFramework="net46" />
-  <package id="GraphQL-Parser" version="2.0.0" targetFramework="net46" />
-  <package id="Helios" version="2.1.3" targetFramework="net45" />
+  <package id="Helios" version="2.1.3" targetFramework="net46" />
   <package id="Hyperion" version="0.9.2" targetFramework="net46" />
   <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net46" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net46" />
-  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net46" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="Owin" version="1.0" targetFramework="net46" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="Serilog" version="2.3.0" targetFramework="net46" />
-  <package id="Serilog.Sinks.TextWriter" version="2.1.0" targetFramework="net46" />
   <package id="System.Collections" version="4.3.0" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net46" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net46" />
@@ -43,11 +31,4 @@
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
-  <package id="xunit" version="2.2.0-beta5-build3474" targetFramework="net46" />
-  <package id="xunit.abstractions" version="2.0.1" targetFramework="net45" />
-  <package id="xunit.assert" version="2.2.0-beta5-build3474" targetFramework="net46" />
-  <package id="xunit.core" version="2.2.0-beta5-build3474" targetFramework="net46" />
-  <package id="xunit.extensibility.core" version="2.2.0-beta5-build3474" targetFramework="net46" />
-  <package id="xunit.extensibility.execution" version="2.2.0-beta5-build3474" targetFramework="net46" />
-  <package id="xunit.runner.console" version="2.2.0-beta5-build3474" targetFramework="net46" developmentDependency="true" />
 </packages>
