--- a/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
+++ b/ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj
@@ -33,6 +33,10 @@
     <DocumentationFile>bin\Release\ClusterKit.API.Client.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations">
+      <HintPath>..\..\packages\JetBrains.Annotations.10.2.1\lib\net\JetBrains.Annotations.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -47,7 +51,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiDescription.cs" />
+    <Compile Include="ApiField.cs" />
+    <Compile Include="ApiRequest.cs" />
+    <Compile Include="ApiType.cs" />
+    <Compile Include="Attributes\ApiDescriptionAttribute.cs" />
+    <Compile Include="Attributes\DeclareConnectionAttribute.cs" />
+    <Compile Include="Attributes\DeclareFieldAttribute.cs" />
+    <Compile Include="Attributes\DeclareMutationAttribute.cs" />
+    <Compile Include="Attributes\PublishToApiAttribute.cs" />
+    <Compile Include="EnFieldFlags.cs" />
+    <Compile Include="EnScalarType.cs" />
+    <Compile Include="ErrorDescription.cs" />
+    <Compile Include="INodeConnection.cs" />
+    <Compile Include="MutationApiRequest.cs" />
+    <Compile Include="MutationResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueryResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
