--- a/ClusterKit.API/ClusterKit.API.Provider/ClusterKit.API.Provider.csproj
+++ b/ClusterKit.API/ClusterKit.API.Provider/ClusterKit.API.Provider.csproj
@@ -134,14 +134,22 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj">
       <Project>{25E3B4DC-717E-4ECA-A756-3112E2093CFF}</Project>
       <Name>ClusterKit.Security.Client</Name>
-</ProjectReference>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApiProvider.cs" />
+    <Compile Include="AssembleTempData.cs" />
+    <Compile Include="InputContractResolver.cs" />
+    <Compile Include="MutationResolverGenerator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResolverGenerator.cs" />
+    <Compile Include="Resolvers\PropertyResolver.cs" />
+    <Compile Include="Resolvers\SwapVisitor.cs" />
+    <Compile Include="TypeMetadata.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
