--- a/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
@@ -226,30 +226,28 @@
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj">
       <Project>{BA97BEED-B078-499D-8C00-6A3D4A0635F2}</Project>
       <Name>ClusterKit.Core</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Core/ClusterKit.Core.TestKit/ClusterKit.Core.TestKit.csproj">
       <Project>{33F25E93-E58E-4F90-A6EB-E7C64546D732}</Project>
       <Name>ClusterKit.Core.TestKit</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.Security/ClusterKit.Security.Client/ClusterKit.Security.Client.csproj">
       <Project>{25E3B4DC-717E-4ECA-A756-3112E2093CFF}</Project>
       <Name>ClusterKit.Security.Client</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.API/ClusterKit.API.Client/ClusterKit.API.Client.csproj">
       <Project>{2A6EDCC4-C729-4BEE-9BB5-AC6F76B3BAC8}</Project>
       <Name>ClusterKit.API.Client</Name>
-</ProjectReference>
+    </ProjectReference>
     <ProjectReference Include="../.././ClusterKit.API/ClusterKit.API.Provider/ClusterKit.API.Provider.csproj">
       <Project>{DDC4B9D1-49AC-4CD6-9FC5-FE4A02C54871}</Project>
       <Name>ClusterKit.API.Provider</Name>
-</ProjectReference>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Auth\AuthenticationTests.cs" />
     <Compile Include="Auth\AuthorizationTests.cs" />
     <Compile Include="GraphQL\ApiProviderPublishResolveIntegration.cs" />
-    <Compile Include="GraphQL\ApiProviderResolveTests.cs" />
-    <Compile Include="GraphQL\ApiProviderTests.cs" />
     <Compile Include="GraphQL\GraphQlControllerTests.cs" />
     <Compile Include="GraphQL\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -268,6 +266,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\ClusterKit.API\ClusterKit.API.Tests\ClusterKit.API.Tests.csproj">
+      <Project>{2126ced2-507d-4c77-a79a-5e07d59b4712}</Project>
+      <Name>ClusterKit.API.Tests</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Web.Authentication\ClusterKit.Web.Authentication.csproj">
       <Project>{4975b025-a1d7-48e8-99d6-96d3722acd78}</Project>
       <Name>ClusterKit.Web.Authentication</Name>
@@ -283,14 +285,6 @@
     <ProjectReference Include="..\ClusterKit.Web.Descriptor\ClusterKit.Web.Descriptor.csproj">
       <Project>{39ca45b9-b12c-48c6-b2f6-1355f151bdcc}</Project>
       <Name>ClusterKit.Web.Descriptor</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClusterKit.Web.GraphQL.API\ClusterKit.Web.GraphQL.API.csproj">
-      <Project>{3ef91b78-723a-445a-92c3-4c0b48fbce9d}</Project>
-      <Name>ClusterKit.Web.GraphQL.API</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ClusterKit.Web.GraphQL.Client\ClusterKit.Web.GraphQL.Client.csproj">
-      <Project>{f9757ef8-1bb7-4a3e-84e0-57e2f8255ea1}</Project>
-      <Name>ClusterKit.Web.GraphQL.Client</Name>
     </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Web.GraphQL.Publisher\ClusterKit.Web.GraphQL.Publisher.csproj">
       <Project>{45219cb4-7189-49c6-a95b-aebbaed4645e}</Project>
