--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/packages.config
@@ -54,4 +54,13 @@
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data.EF" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data.CRUD" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Security.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Swagger.Messages" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Monitoring.Client" version="0.0.0-local" targetFramework="net45" />
 </packages>
