--- a/ClusterKit.Security/ClusterKit.Security.Client/packages.config
+++ b/ClusterKit.Security/ClusterKit.Security.Client/packages.config
@@ -31,4 +31,5 @@
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading" version="4.3.0" targetFramework="net452" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net452" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
 </packages>
