--- a/ClusterKit.Security/ClusterKit.Security.Tests/packages.config
+++ b/ClusterKit.Security/ClusterKit.Security.Tests/packages.config
@@ -46,4 +46,5 @@
   <package id="xunit.extensibility.core" version="2.2.0-beta5-build3474" targetFramework="net46" />
   <package id="xunit.extensibility.execution" version="2.2.0-beta5-build3474" targetFramework="net46" />
   <package id="xunit.runner.console" version="2.2.0-beta5-build3474" targetFramework="net46" developmentDependency="true" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
 </packages>
