--- a/ClusterKit.Data/ClusterKit.Data.EF.Npgsql/packages.config
+++ b/ClusterKit.Data/ClusterKit.Data.EF.Npgsql/packages.config
@@ -57,4 +57,8 @@
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net46" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net46" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Security.Client" version="0.0.0-local" targetFramework="net45" />
 </packages>
