--- a/ClusterKit.Data/ClusterKit.Data.Tests/packages.config
+++ b/ClusterKit.Data/ClusterKit.Data.Tests/packages.config
@@ -16,4 +16,9 @@
   <package id="xunit.extensibility.core" version="2.2.0-beta5-build3474" targetFramework="net46" />
   <package id="xunit.extensibility.execution" version="2.2.0-beta5-build3474" targetFramework="net46" />
   <package id="xunit.runner.console" version="2.2.0-beta5-build3474" targetFramework="net46" developmentDependency="true" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.TestKit" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Security.Client" version="0.0.0-local" targetFramework="net45" />
 </packages>
