--- a/ClusterKit.LargeObjects/ClusterKit.LargeObjects.Tests/packages.config
+++ b/ClusterKit.LargeObjects/ClusterKit.LargeObjects.Tests/packages.config
@@ -40,4 +40,6 @@
   <package id="xunit.extensibility.core" version="2.2.0-beta5-build3474" targetFramework="net46" />
   <package id="xunit.extensibility.execution" version="2.2.0-beta5-build3474" targetFramework="net46" />
   <package id="xunit.runner.console" version="2.2.0-beta5-build3474" targetFramework="net46" developmentDependency="true" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.TestKit" version="0.0.0-local" targetFramework="net45" />
 </packages>
