--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
@@ -80,4 +80,22 @@
   <package id="xunit.extensibility.core" version="2.2.0-beta5-build3474" targetFramework="net46" />
   <package id="xunit.extensibility.execution" version="2.2.0-beta5-build3474" targetFramework="net46" />
   <package id="xunit.runner.console" version="2.2.0-beta5-build3474" targetFramework="net46" developmentDependency="true" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.TestKit" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data.CRUD" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data.TestKit" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data.EF" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data.EF.TestKit" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data.EF.Npgsql" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Descriptor" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Rest" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Security.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Authorization" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Swagger.Messages" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Monitoring.Client" version="0.0.0-local" targetFramework="net45" />
 </packages>
