--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/packages.config
@@ -44,4 +44,18 @@
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.LargeObjects" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data.EF" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Data.CRUD" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Descriptor" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Rest" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Security.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Authorization" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Web.Swagger.Messages" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Monitoring.Client" version="0.0.0-local" targetFramework="net45" />
 </packages>
