--- a/ClusterKit.Web/ClusterKit.Web.Swagger.Messages/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.Swagger.Messages/packages.config
@@ -7,4 +7,6 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net46" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Security.Client" version="0.0.0-local" targetFramework="net45" />
 </packages>
