--- a/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/packages.config
@@ -50,4 +50,10 @@
   <package id="xunit.extensibility.core" version="2.2.0-beta5-build3474" targetFramework="net46" />
   <package id="xunit.extensibility.execution" version="2.2.0-beta5-build3474" targetFramework="net46" />
   <package id="xunit.runner.console" version="2.2.0-beta5-build3474" targetFramework="net46" developmentDependency="true" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.TestKit" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Security.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.API.Client" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.API.Provider" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.API.Tests" version="0.0.0-local" targetFramework="net45" />
 </packages>
