--- a/ClusterKit.Web/ClusterKit.Web/packages.config
+++ b/ClusterKit.Web/ClusterKit.Web/packages.config
@@ -39,4 +39,6 @@
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading" version="4.3.0" targetFramework="net46" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net46" />
+  <package id="ClusterKit.Core" version="0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Security.Client" version="0.0.0-local" targetFramework="net45" />
 </packages>
