--- a/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
@@ -272,6 +272,7 @@
   <ItemGroup>
     <Compile Include="Auth\AuthenticationTests.cs" />
     <Compile Include="Auth\AuthorizationTests.cs" />
+    <Compile Include="GraphQL\ApiBrowserActorTest.cs" />
     <Compile Include="GraphQL\ApiProviderPublishResolveIntegration.cs" />
     <Compile Include="GraphQL\GraphQlControllerTests.cs" />
     <Compile Include="GraphQL\Resources.Designer.cs">
